--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -65,7 +65,7 @@ jobs:
         run: git config core.quotepath false
       - name: Build with Hugo
         run: |
-          cd ./exampleSite
+          cd ./maidenblog
           hugo \
             --gc \
             --minify \
@@ -82,7 +82,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./exampleSite/public
+          path: ./maidenblog/public
 
   # Deployment job
   deploy:
