--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -48,6 +48,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: exampleSite
+          submodules: true
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
