--- a/maidenblog/config.yml
+++ b/maidenblog/config.yml
@@ -86,7 +86,7 @@ params:
   homeInfoParams:
     Title: "Three Halves"
     Content: >
-      *And the town I grew up in was one half train tracks, one half hotels, and one half fast food restaurants.*
+      *"And the town I grew up in was one half train tracks, one half hotels, and one half fast food restaurants."*
 
       - Hello! I am a Software Engineer and Car Enthusiast, this blog is mainly for sharing my musings and documenting the little things that make me happy.
 
