--- a/maidenblog/config.yml
+++ b/maidenblog/config.yml
@@ -50,16 +50,16 @@ outputs:
 
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
-  description: "Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod"
-  author: Theme PaperMod
+  description: "Just for Fun"
+  author: Dabin
   # author: ["Me", "You"] # multiple authors
 
   defaultTheme: auto
   # disableThemeToggle: true
-  ShowShareButtons: true
+  ShowShareButtons: false
   ShowReadingTime: true
   # disableSpecial1stPost: true
-  displayFullLangName: true
+  # displayFullLangName: true
   ShowPostNavLinks: true
   ShowBreadCrumbs: true
   ShowCodeCopyButtons: true
@@ -72,7 +72,7 @@ params:
 
   profileMode:
     enabled: false
-    title: PaperMod
+    title: maiden.kr
     imageUrl: "#"
     imageTitle: my image
     # imageWidth: 120
@@ -108,10 +108,10 @@ params:
       title: YouTube
       url: "https://www.youtube.com/@suchracing"
 
-  # editPost:
-    # URL: "https://github.com/adityatelange/hugo-PaperMod/tree/exampleSite/content"
-    # Text: "Suggest Changes" # edit text
-    # appendFilePath: true # to append file path to Edit link
+  editPost:
+    URL: "https://github.com/maidenkorea/blog/discussions"
+    Text: "Suggest Changes" # edit text
+    appendFilePath: true # to append file path to Edit link
 
   # label:
   # iconSVG: '<svg xmlns="http://www.w3.org/2000/svg" height="25" viewBox="0 -960 960 960" fill="currentColor"><path d="M320-240h320v-80H320v80Zm0-160h320v-80H320v80ZM240-80q-33 0-56.5-23.5T160-160v-640q0-33 23.5-56.5T240-880h320l240 240v480q0 33-23.5 56.5T720-80H240Zm280-520v-200H240v640h480v-440H520ZM240-800v200-200 640-640Z"/></svg>'
