--- a/maidenblog/config.yml
+++ b/maidenblog/config.yml
@@ -51,7 +51,7 @@ outputs:
 params:
   env: production # to enable google analytics, opengraph, twitter-cards and schema.
   description: "Just for Fun"
-  author: @maidenkorea
+  author: maidenkorea
   # author: ["Me", "You"] # multiple authors
 
   defaultTheme: auto
